--- a/.github/workflows/publish_car.yml
+++ b/.github/workflows/publish_car.yml
@@ -20,6 +20,7 @@ jobs:
         ./mvnw clean install
         mvn talend-component:car
         echo "::set-output name=pom_version::$(mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.version -q -DforceStdout)"
+        mv ./target/datagenerator-component-${{ steps.build.outputs.pom_version }}.car ./target/datagenerator-component.car
 
     - name: Delete
       uses: ame-yu/action-delete-latest-release@v2
@@ -30,6 +31,6 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
          tag_name: ${{ steps.build.outputs.pom_version }}
-         files: ./target/datagenerator-component-${{ steps.build.outputs.pom_version }}.car
+         files: ./target/datagenerator-component.car
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
