--- a/.github/workflows/publish_car.yml
+++ b/.github/workflows/publish_car.yml
@@ -18,9 +18,8 @@ jobs:
       run: |
         chmod +x ./mvnw
         ./mvnw clean install
-        mvn talend-component:car
+        mvn talend-component:car -Dtalend.car.output=./target/datagenerator-component.car
         echo "::set-output name=pom_version::$(mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.version -q -DforceStdout)"
-        mv ./target/datagenerator-component-${{ steps.build.outputs.pom_version }}.car ./target/datagenerator-component.car
 
     - name: Delete
       uses: ame-yu/action-delete-latest-release@v2
