--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>com.datagenerator</groupId>
   <artifactId>datagenerator-component</artifactId>
-  <version>0.4</version>
+  <version>0.5-alpha</version>
   <packaging>jar</packaging>
 
   <name>A Component Family</name>
@@ -57,15 +57,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.devskiller</groupId>
-      <artifactId>jfairy</artifactId>
-      <version>0.6.2</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.github.javafaker</groupId>
       <artifactId>javafaker</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.2</version>
     </dependency>
 
   </dependencies>
