--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>com.datagenerator</groupId>
   <artifactId>datagenerator-component</artifactId>
-  <version>0.5-alpha</version>
+  <version>0.5</version>
   <packaging>jar</packaging>
 
   <name>A Component Family</name>
