--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.datagenerator</groupId>
+  <groupId>com.talend</groupId>
   <artifactId>datagenerator-component</artifactId>
-  <version>0.9</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>Data Generator</name>
-  <description>Data Generator component for Talend Pipeline Designer</description>
+  <description>Data Generator component for Talend Cloud apps</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,7 +32,7 @@
     TIP: it is recommended to set this property into your settings.xml in an active by default profile.
     -->
     <talend.component.studioHome />
-    <component.version>1.1.15</component.version>
+    <component.version>1.1.20</component.version>
     <slf4j.version>1.7.25</slf4j.version>
   </properties>
 
